style.css
body{
    background-color: #F3E7D3;
    margin: 0;
    overflow-x: hidden;
}

.pre-title{
    text-align: center;
    color: #3E2C1C;
    font-size: 30px;;
}
.pre-title-blurb-underneath{
    text-align: center;
    color: #3E2C1C;
    font-size: 8px;
    margin-top: -25px;
}
h3{
    text-align: center;
    color: #3E2C1C;
    font-size: 24px;
    margin-top: 30px;
}
h4{    
    text-align: center;
    color: #3E2C1C;
    font-size: 92px;
    margin-bottom: 10px;
    margin-top: 0px;

}
h5{
    text-align: center;
    color: #F7EDDF;
    font-size: 106px;
    margin-top: 10px;
}

.hero-image{
    background-image: url("./imagefolder/image\ under\ title.jpg");
    height: 501px;
    margin-top: 0px; 
    padding-top: 250px;
    background-repeat: no-repeat;
    background-size: contain;
    width: 100%;
}

h6{
    color: #3E2C1C;
    font-size: 58px;
    padding: 20px 150px;
    margin-bottom: 0px;
    width: 100%;
    margin-top: 100px;
}

.intro-text{
    width: 1000px;
    margin-left: auto;
    margin-right: auto;
}
.content-intro{
    color: #3E2C1C;
    font-size: 23px; 
    width: 100%;
    text-align: left;
    line-height: 1.5;
}

.half-burger-image{
    margin-left: 200px;
}

.text-next-to-intro-image{
    color: #3E2C1C;
    font-size: 23px; 
    text-align: left;
    width: 500px;
    margin-top: -25px;
}

.two-columns{
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 10px;
    margin-top: 50px;
}

.burger-collection-title{
    text-align: left;
    color: #3E2C1C;
    font-size: 40px;
    margin-left: 400px;
    margin-bottom: 10px;
    margin-top: 120px;
    width: 100px;
    line-height: 60px;
}

.beef-section-title{
    text-align: center;
    color: #3E2C1C;  
    font-size: 25px;
}

.section-title{
    text-align: center;
    color: #3E2C1C;  
    font-size: 25px;
    margin-top: 100px;
}

.three-columns{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 1fr 1fr;
    gap: 50px;
    width: 88%;     
    margin: 0 auto; 
}

.three-columns img{
    width: 100%;

}

.intro-paragraphs{
    width: 100%;
}

.burger-title {
    color: #3E2C1C;
    text-align: center;  
    font-size: 30px;     
    margin-top: 35px; 
    line-height: 8px;   
}

.burger-prompt{
    color: #3E2C1C;
    text-align: center;  
    font-size: 15px;     
    margin-top: 2px;    
}

.card{
    height: 525px;
}

